<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
    <string name="main_name">module-main</string>
    <string name="main_str_people_guide_explain">
        欢迎使用%1$s！\n\n
        我们非常重视您的个人隐私,请您在使 用本App前仔细阅读《用户协议》和《隐私政策》,
        点击“同意”按钮代表你已理解并同意前述两个文件所写内容，及以下约定。\n\n
        1.我们会申请系统设备权限收集设备信息,用于信息推送和安全风险控制。
        拒绝授权或关闭此权限会导致无法收到推送信息，但不影响其他功能使用。\n\n
        2.我们可能会申请访问摄像头、相册、麦克风和存储空间的权限，用于发布对应的内容信息，
        这些信息仅用于发布内容，我们不会进行保存或收集。拒绝授权或关闭此权限只会使对应类型的内容信息无法发布，
        不影响其他功能使用。\n\n
        3.我们可能会申请位置权限，用于在您浏览基于本地位置的的内容信息。
        拒绝授权或关闭此权权限将无法使用此功能。\n\n
        4.我们的产品集成友盟+SDK，友盟+SDK需要收集您的设备Mac地址、唯一设备识别码（IMEI/android ID/IDFA/OPENUDID/GUID、SIM 卡 IMSI 信息）
        以提供统计分析服务，并通过地理位置校准报表数据准确性，提供基础反作弊能力。</string>

    <string name="main_str_people_guide_refuse_hint">需要同意个人信息保护指引才能继续使用%1$sApp</string>
    <string name="main_exit_not_lottery_probability">福气指数：你的抽奖概率%.1f%%</string>
    <string name="main_exit_other">换一个</string>
    <string name="main_exit_lottery">免费抢购</string>
    <string name="main_exit_price">¥ %.1f</string>
    <string name="main_buy_number">累计%s人抢购</string>

    <string name="main_exit_not_open_red_packed_number_1">你还有</string>
    <string name="main_exit_not_open_red_packed_number_2"> %d个 </string>
    <string name="main_exit_not_open_red_packed_number_3"> 现金红包未开启 </string>
    <string name="main_exit_btn_open_red_packet">开红包领现金</string>
    <string name="main_exit_remind_delay">稍后提示</string>
    <string name="main_exit_open_remind">开启提醒</string>
    <string name="main_exit_know">我知道了</string>
    <string name="main_exit_continue_lottery_title">再抽%s次，中奖概率可提升%s%%</string>
    <string name="main_exit_remind_titl">温馨提示</string>
    <string name="main_exit_remind_msg">明日%s点开奖</string>

    <string name="return_intercept_title">参与抽奖，立即获得</string>
    <string name="return_intercept_withdraw" tools:ignore="ResourceName">抽奖开红包, 可提现至</string>
    <string name="return_intercept_hint">最高</string>
    <string name="return_intercept_button_no" tools:ignore="ResourceName">立即登录抢购</string>
    <string name="return_intercept_button" tools:ignore="ResourceName">立即抢购</string>
    <string name="return_intercept_hint_no" tools:ignore="ResourceName">新人专享</string>
    <string name="return_intercept_withdraw_no" tools:ignore="ResourceName">可提现至</string>
</resources>
