<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="redPacketNumber"
            type="Integer" />

        <variable
            name="eventListener"
            type="com.donews.main.dialog.OpenRedPacketDialog.EventListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_window_top"
            android:layout_width="302dp"
            android:layout_height="213dp"
            android:background="@drawable/main_exit_red_packet_window_top"
            app:layout_constraintBottom_toTopOf="@id/iv_window_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/iv_window_bottom"
            android:layout_width="302dp"
            android:layout_height="193dp"
            android:background="@drawable/main_exit_red_packet_window_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_window_top" />

        <TextView
            android:id="@+id/tv_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:includeFontPadding="false"
            android:text="@string/main_exit_not_open_red_packed_number_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_title_2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/iv_window_top"
            app:layout_constraintTop_toTopOf="@id/iv_window_top" />

        <TextView
            android:id="@+id/tv_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:includeFontPadding="false"
            android:text="@{@string/main_exit_not_open_red_packed_number_2(redPacketNumber)}"
            android:textColor="@color/common_FFE7BD"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_title_1"
            app:layout_constraintEnd_toStartOf="@id/tv_title_3"
            app:layout_constraintStart_toEndOf="@id/tv_title_1"
            app:layout_constraintTop_toTopOf="@id/tv_title_1"
            tools:text="3个" />

        <TextView
            android:id="@+id/tv_title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/main_exit_not_open_red_packed_number_3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_title_1"
            app:layout_constraintEnd_toEndOf="@id/iv_window_top"
            app:layout_constraintStart_toEndOf="@id/tv_title_2"
            app:layout_constraintTop_toTopOf="@id/tv_title_1" />


        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="98dp"
            android:layout_height="26dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/main_bg_exit_red_packed__tips"
            android:gravity="center"
            android:text="可提现至微信"
            android:textColor="#FFFFDFDF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_1" />

        <ImageView
            android:id="@+id/iv_red_packet"
            android:layout_width="235dp"
            android:layout_height="255dp"
            android:layout_marginTop="75dp"
            android:scaleType="centerInside"
            android:src="@drawable/main_exit_red_packet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_window_top" />

        <Button
            android:id="@+id/btn_open_red_packet"
            android:layout_width="217dp"
            android:layout_height="38dp"
            android:background="@drawable/main_exit_btn_bg_positive"
            android:onClick="@{eventListener::clickOpenPacket}"
            android:text="@string/main_exit_btn_open_red_packet"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_red_packet" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{eventListener::clickTvClose}"
            android:padding="10dp"
            android:text="@string/main_exit_remind_delay"
            android:gravity="center"
            android:textColor="#FFA9AEB1"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_open_red_packet" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:onClick="@{eventListener::clickIvClose}"
            android:src="@drawable/common_close"
            app:layout_constraintBottom_toTopOf="@id/iv_window_top"
            app:layout_constraintEnd_toEndOf="@id/iv_window_top" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="iv_close,tv_close" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>