<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="remindConfig"
            type="com.donews.main.entitys.resps.RemindConfig" />

        <variable
            name="eventListener"
            type="com.donews.main.dialog.RemindDialogExt.EventListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_window"
            android:layout_width="232dp"
            android:layout_height="190dp"
            android:background="@drawable/dialog_main_exit_red_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:onClick="@{eventListener::clickIvClose}"
            android:src="@drawable/common_close"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/iv_top_text"
            app:layout_constraintEnd_toEndOf="@id/iv_window" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/main_exit_remind_titl"
            android:textColor="@color/common_F33737"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/iv_window"
            app:layout_constraintStart_toStartOf="@id/iv_window"
            app:layout_constraintTop_toTopOf="@id/iv_window" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@{@string/main_exit_remind_msg(remindConfig.remindTime)}"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_window"
            app:layout_constraintStart_toStartOf="@id/iv_window"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/main_exit_remind_msg" />

        <TextView
            android:id="@+id/tv_msg_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="记得查收好运哦!"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_window"
            app:layout_constraintStart_toStartOf="@id/iv_window"
            app:layout_constraintTop_toBottomOf="@id/tv_msg" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="161dp"
            android:layout_height="45dp"
            android:background="@drawable/main_bg_guide_but"
            android:onClick="@{eventListener::clickRemind}"
            android:paddingBottom="1dp"
            android:text="@string/main_exit_open_remind"
            android:textColor="@color/common_F43838"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_window"
            app:layout_constraintLeft_toLeftOf="@+id/iv_window"
            app:layout_constraintRight_toRightOf="@+id/iv_window"
            app:layout_constraintTop_toBottomOf="@id/tv_msg_desc" />

        <LinearLayout
            android:id="@+id/btn_close"
            android:layout_width="161dp"
            android:layout_height="45dp"
            android:background="@drawable/main_bg_guide_but"
            android:gravity="center"
            android:onClick="@{eventListener::laterClose}"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_window"
            app:layout_constraintLeft_toLeftOf="@+id/iv_window"
            app:layout_constraintRight_toRightOf="@+id/iv_window"
            app:layout_constraintTop_toBottomOf="@id/tv_msg_desc"
            app:layout_goneMarginTop="22dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="我知道了"
                android:textColor="#D82D2A"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_close_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="(3)"
                android:textColor="#D82D2A"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:onClick="@{eventListener::laterClose}"
            android:padding="5dp"
            android:text="@string/main_exit_know"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@+id/iv_window"
            app:layout_constraintRight_toRightOf="@+id/iv_window"
            app:layout_constraintTop_toBottomOf="@+id/iv_window" />

        <ImageView
            android:id="@+id/iv_top_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="-35dp"
            android:src="@drawable/main_exit_dialog_sz"
            app:layout_constraintLeft_toLeftOf="@+id/iv_window"
            app:layout_constraintRight_toRightOf="@id/iv_window"
            app:layout_constraintTop_toTopOf="@+id/iv_window" />

        <ImageView
            android:id="@+id/iv_top_text"
            android:layout_width="275dp"
            android:layout_height="93dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/main_exit_all_open_next"
            app:layout_constraintBottom_toTopOf="@+id/iv_top_icon"
            app:layout_constraintLeft_toLeftOf="@+id/iv_window"
            app:layout_constraintRight_toRightOf="@id/iv_window" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>