<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.SpannableString" />

        <variable
            name="title"
            type="SpannableString" />

        <variable
            name="goodsBean"
            type="com.donews.main.entitys.resps.ExitDialogRecommendGoods" />

        <variable
            name="totalPeople"
            type="String" />

        <variable
            name="eventListener"
            type="com.donews.main.dialog.ContinueLotteryDialog.EventListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_window"
            android:layout_width="302dp"
            android:layout_height="433dp"
            android:background="@drawable/common_bg_white_corner_13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:onClick="@{eventListener::clickClose}"
            android:src="@drawable/common_close"
            app:layout_constraintBottom_toTopOf="@id/iv_window"
            app:layout_constraintEnd_toEndOf="@id/iv_window" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@{title}"
            android:textColor="@color/common_2C2C2C"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/iv_window"
            app:layout_constraintStart_toStartOf="@id/iv_window"
            app:layout_constraintTop_toTopOf="@id/iv_window"
            tools:text="@string/main_exit_continue_lottery_title" />

        <ImageView
            android:id="@+id/iv_goods_pic"
            android:layout_width="243dp"
            android:layout_height="243dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="@id/iv_window"
            app:layout_constraintStart_toStartOf="@id/iv_window"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:url="@{goodsBean.mainPic}" />

        <TextView
            android:id="@+id/tv_goods_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="19dp"
            android:maxLines="1"
            android:text="@{goodsBean.title}"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/iv_goods_pic"
            app:layout_constraintStart_toStartOf="@id/iv_goods_pic"
            app:layout_constraintTop_toBottomOf="@id/iv_goods_pic"
            tools:text="商品标题" />

        <TextView
            android:id="@+id/tv_actual_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{@string/main_exit_price(goodsBean.displayPrice)}"
            android:textColor="@color/common_e9423e"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/tv_goods_title"
            app:layout_constraintTop_toBottomOf="@id/tv_goods_title"
            tools:text="¥ 24" />

        <TextView
            android:id="@+id/tv_original_price"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="2dp"
            android:text="@{@string/main_exit_price(goodsBean.originalPrice)}"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_actual_price"
            app:layout_constraintStart_toEndOf="@id/tv_actual_price"
            app:layout_constraintTop_toTopOf="@id/tv_actual_price"
            tools:text="¥ 1699" />

        <TextView
            android:id="@+id/tv_buy_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/main_buy_number(totalPeople)}"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_actual_price"
            app:layout_constraintEnd_toEndOf="@id/iv_goods_pic"
            app:layout_constraintTop_toTopOf="@id/tv_actual_price"
            tools:text="累计1.8万人抢购" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="94dp"
            android:layout_height="38dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/main_exit_btn_bg_negative"
            android:onClick="@{eventListener::clickNext}"
            android:text="@string/main_exit_other"
            android:textColor="@color/common_F43838"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btn_lottery"
            app:layout_constraintStart_toStartOf="@id/iv_window"
            app:layout_constraintTop_toBottomOf="@id/tv_actual_price" />

        <Button
            android:id="@+id/btn_lottery"
            android:layout_width="165dp"
            android:layout_height="38dp"
            android:background="@drawable/main_exit_btn_bg_positive"
            android:onClick="@{eventListener::clickLottery}"
            android:text="@string/main_exit_lottery"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_window"
            app:layout_constraintStart_toEndOf="@id/btn_next"
            app:layout_constraintTop_toTopOf="@id/btn_next" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>